ollama-all-in-one.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama

---


apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ollama
  name: ollama
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
      - name: ollama
        image: ollama/ollama:latest
        imagePullPolicy: IfNotPresent
        lifecycle:
          postStart:
            exec:
              command: 
                - /bin/sh
                - -c
                - |
                  while ! ollama ps > /dev/null 2>&1; do
                      sleep 5
                  done
                  ollama start llama3.2
                  ollama list
        ports:
        - containerPort: 11434
          name: http
          protocol: TCP
        volumeMounts:
          - name: ollama
            mountPath: "/root/.ollama"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      volumes:
      - name: ollama
        hostPath:
          path: /opt/ollama
          type: DirectoryOrCreate


---

apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
spec:
  ports:
  - name: http
    port: 11434
    protocol: TCP
    targetPort: 11434
  selector:
    app: ollama
  type: ClusterIP

---
