ingress-activity-gpt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: activity-gpt
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /api/v1/activity-gpt/
        pathType: ImplementationSpecific
        backend:
          service:
            name: activity-gpt
            port:
              number: 5001
